--- a/components/sb-ext-markdown/extmarkdown.css
+++ b/components/sb-ext-markdown/extmarkdown.css
@@ -1,393 +1,291 @@
-#markdown_output {
-  font-family: Helvetica, arial, sans-serif;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.4;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: white;
-  padding: 30px;
-  color: #333;
-  overflow: auto;
-}
-
-#markdown_output > *:first-child {
-  margin-top: 0 !important;
-}
-
-#markdown_output > *:last-child {
-  margin-bottom: 0 !important;
-}
-
-#markdown_output a {
-  color: #4183C4;
-  text-decoration: none;
-}
-
-#markdown_output a:hover {
-	text-decoration: underline;
-}
-
-#markdown_output a.absent {
-  color: #cc0000;
-}
-
-#markdown_output a.anchor {
-  display: block;
-  padding-left: 30px;
-  margin-left: -30px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-}
-
-#markdown_output h1, #markdown_output h2, #markdown_output h3, #markdown_output h4, #markdown_output h5, #markdown_output h6 {
-  margin: 20px 0 10px;
-  padding: 0;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  cursor: text;
-  position: relative;
-}
-
-#markdown_output h2:first-child, #markdown_output h1:first-child, #markdown_output h1:first-child + h2, #markdown_output h3:first-child, #markdown_output h4:first-child, #markdown_output h5:first-child, #markdown_output h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output h1:hover a.anchor, #markdown_output h2:hover a.anchor, #markdown_output h3:hover a.anchor, #markdown_output h4:hover a.anchor, #markdown_output h5:hover a.anchor, #markdown_output h6:hover a.anchor {
-  text-decoration: none;
-}
-
-#markdown_output h1 tt, #markdown_output h1 code {
-  font-size: inherit;
-}
-
-#markdown_output h2 tt, #markdown_output h2 code {
-  font-size: inherit;
-}
-
-#markdown_output h3 tt, #markdown_output h3 code {
-  font-size: inherit;
-}
-
-#markdown_output h4 tt, #markdown_output h4 code {
-  font-size: inherit;
-}
-
-#markdown_output h5 tt, #markdown_output h5 code {
-  font-size: inherit;
-}
-
-#markdown_output h6 tt, #markdown_output h6 code {
-  font-size: inherit;
-}
-
-#markdown_output h1 {
-  font-size: 28px;
-  color: black;
-}
-
-#markdown_output h2 {
-  font-size: 24px;
-  border-bottom: 1px solid #cccccc;
-  color: black;
-}
-
-#markdown_output h3 {
-  font-size: 18px;
-}
-
-#markdown_output h4 {
-  font-size: 16px;
-}
-
-#markdown_output h5 {
-  font-size: 14px;
-}
-
-#markdown_output h6 {
-  color: #777777;
-  font-size: 14px;
-}
-
-#markdown_output p, #markdown_output blockquote, #markdown_output ul, #markdown_output ol, #markdown_output dl, #markdown_output li, #markdown_output table, #markdown_output pre {
-  margin: 15px 0;
-}
-
-#markdown_output hr {
-  background: transparent repeat-x 0 0;
-  border: 0 none;
-  color: #cccccc;
-  height: 4px;
-  padding: 0;
-}
-
-#markdown_output > h2:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output > h1:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output > h1:first-child + h2 {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output > h3:first-child, #markdown_output > h4:first-child, #markdown_output > h5:first-child, #markdown_output > h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output a:first-child h1, #markdown_output a:first-child h2, #markdown_output a:first-child h3, #markdown_output a:first-child h4, #markdown_output a:first-child h5, #markdown_output a:first-child h6 {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-#markdown_output h1 p, #markdown_output h2 p, #markdown_output h3 p, #markdown_output h4 p, #markdown_output h5 p, #markdown_output h6 p {
-  margin-top: 0;
-}
-
-#markdown_output li p.first {
-  display: inline-block;
-}
-
-#markdown_output ul, #markdown_output ol {
-  padding-left: 30px;
-}
-
-#markdown_output ul :first-child, #markdown_output ol :first-child {
-  margin-top: 0;
-}
-
-#markdown_output ul :last-child, #markdown_output ol :last-child {
-  margin-bottom: 0;
-}
-
-#markdown_output dl {
-  padding: 0;
-}
-
-#markdown_output dl dt {
-  font-size: 14px;
-  font-weight: bold;
-  font-style: italic;
-  padding: 0;
-  margin: 15px 0 5px;
-}
-
-#markdown_output dl dt:first-child {
-  padding: 0;
-}
-
-#markdown_output dl dt > :first-child {
-  margin-top: 0;
-}
-
-#markdown_output dl dt > :last-child {
-  margin-bottom: 0;
-}
-
-#markdown_output dl dd {
-  margin: 0 0 15px;
-  padding: 0 15px;
-}
-
-#markdown_output dl dd > :first-child {
-  margin-top: 0;
-}
-
-#markdown_output dl dd > :last-child {
-  margin-bottom: 0;
-}
-
-#markdown_output blockquote {
-  border-left: 4px solid #dddddd;
-  padding: 0 15px;
-  color: #777777;
-}
-
-#markdown_output blockquote > :first-child {
-  margin-top: 0;
-}
-
-#markdown_output blockquote > :last-child {
-  margin-bottom: 0;
-}
-
-#markdown_output table {
-  padding: 0;
-}
-#markdown_output table tr {
-  border-top: 1px solid #cccccc;
-  background-color: white;
-  margin: 0;
-  padding: 0;
-}
-
-#markdown_output table tr:nth-child(2n) {
-  background-color: #f8f8f8;
-}
-
-#markdown_output table tr th {
-  font-weight: bold;
-  border: 1px solid #cccccc;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
-
-#markdown_output table tr td {
-  border: 1px solid #cccccc;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
-
-#markdown_output table tr th :first-child, #markdown_output table tr td :first-child {
-  margin-top: 0;
-}
-
-#markdown_output table tr th :last-child, #markdown_output table tr td :last-child {
-  margin-bottom: 0;
-}
-
-#markdown_output img {
-  max-width: 100%;
-}
-
-#markdown_output span.frame {
-  display: block;
-  overflow: hidden;
-}
-
-#markdown_output span.frame > span {
-  border: 1px solid #dddddd;
-  display: block;
-  float: left;
-  overflow: hidden;
-  margin: 13px 0 0;
-  padding: 7px;
-  width: auto;
-}
-
-#markdown_output span.frame span img {
-  display: block;
-  float: left;
-}
-
-#markdown_output span.frame span span {
-  clear: both;
-  color: #333333;
-  display: block;
-  padding: 5px 0 0;
-}
-
-#markdown_output span.align-center {
-  display: block;
-  overflow: hidden;
-  clear: both;
-}
-
-#markdown_output span.align-center > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px auto 0;
-  text-align: center;
-}
-
-#markdown_output span.align-center span img {
-  margin: 0 auto;
-  text-align: center;
-}
-
-#markdown_output span.align-right {
-  display: block;
-  overflow: hidden;
-  clear: both;
-}
-
-#markdown_output span.align-right > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px 0 0;
-  text-align: right;
-}
-
-#markdown_output span.align-right span img {
-  margin: 0;
-  text-align: right;
-}
-
-#markdown_output span.float-left {
-  display: block;
-  margin-right: 13px;
-  overflow: hidden;
-  float: left;
-}
-
-#markdown_output span.float-left span {
-  margin: 13px 0 0;
-}
-
-#markdown_output span.float-right {
-  display: block;
-  margin-left: 13px;
-  overflow: hidden;
-  float: right;
-}
-
-#markdown_output span.float-right > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px auto 0;
-  text-align: right;
-}
-
-#markdown_output code, #markdown_output tt {
-  margin: 0 2px;
-  padding: 0 5px;
-  white-space: nowrap;
-  border: 1px solid #eaeaea;
-  background-color: #f8f8f8;
-  border-radius: 3px;
-}
-
-#markdown_output pre code {
-  margin: 0;
-  padding: 0;
-  white-space: pre;
-  border: none;
-  background: transparent;
-}
-
-#markdown_output .highlight pre {
-  background-color: #f8f8f8;
-  border: 1px solid #cccccc;
-  font-size: 13px;
-  line-height: 19px;
-  overflow: auto;
-  padding: 6px 10px;
-  border-radius: 3px;
-}
-
-#markdown_output pre {
-  background-color: #f8f8f8;
-  border: 1px solid #cccccc;
-  font-size: 13px;
-  line-height: 19px;
-  overflow: auto;
-  padding: 6px 10px;
-  border-radius: 3px;
-}
-
-#markdown_output pre code, #markdown_output pre tt {
-  background-color: transparent;
-  border: none;
+.markdown-body {
+    font-family: Helvetica, arial, sans-serif;
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.4;
+    background-color: white;
+    padding: 30px;
+    color: #333;
+    overflow: auto;
+}
+.markdown-body>*:first-child {
+    margin-top: 0 !important;
+}
+.markdown-body>*:last-child {
+    margin-bottom: 0 !important;
+}
+.markdown-body a {
+    color: #4183C4;
+    text-decoration: none;
+}
+.markdown-body a:hover {
+    text-decoration: underline;
+}
+.markdown-body a.absent {
+    color: #c00;
+}
+.markdown-body a.anchor {
+    display: block;
+    padding-left: 30px;
+    margin-left: -30px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+}
+.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
+    margin: 1em 0 15px;
+    padding: 0;
+    font-weight: bold;
+    line-height: 1.7;
+    cursor: text;
+    position: relative;
+}
+.markdown-body h1 .octicon-link, .markdown-body h2 .octicon-link, .markdown-body h3 .octicon-link, .markdown-body h4 .octicon-link, .markdown-body h5 .octicon-link, .markdown-body h6 .octicon-link {
+    display: none;
+    color: #000;
+}
+.markdown-body h1:hover a.anchor, .markdown-body h2:hover a.anchor, .markdown-body h3:hover a.anchor, .markdown-body h4:hover a.anchor, .markdown-body h5:hover a.anchor, .markdown-body h6:hover a.anchor {
+    text-decoration: none;
+    line-height: 1;
+    padding-left: 0;
+    margin-left: -22px;
+    top: 15%}
+.markdown-body h1:hover a.anchor .octicon-link, .markdown-body h2:hover a.anchor .octicon-link, .markdown-body h3:hover a.anchor .octicon-link, .markdown-body h4:hover a.anchor .octicon-link, .markdown-body h5:hover a.anchor .octicon-link, .markdown-body h6:hover a.anchor .octicon-link {
+    display: inline-block;
+}
+.markdown-body h1 tt, .markdown-body h1 code, .markdown-body h2 tt, .markdown-body h2 code, .markdown-body h3 tt, .markdown-body h3 code, .markdown-body h4 tt, .markdown-body h4 code, .markdown-body h5 tt, .markdown-body h5 code, .markdown-body h6 tt, .markdown-body h6 code {
+    font-size: inherit;
+}
+.markdown-body h1 {
+    font-size: 2.5em;
+    border-bottom: 1px solid #ddd;
+}
+.markdown-body h2 {
+    font-size: 2em;
+    border-bottom: 1px solid #eee;
+}
+.markdown-body h3 {
+    font-size: 1.5em;
+}
+.markdown-body h4 {
+    font-size: 1.2em;
+}
+.markdown-body h5 {
+    font-size: 1em;
+}
+.markdown-body h6 {
+    color: #777;
+    font-size: 1em;
+}
+.markdown-body p, .markdown-body blockquote, .markdown-body ul, .markdown-body ol, .markdown-body dl, .markdown-body table, .markdown-body pre {
+    margin: 15px 0;
+}
+.markdown-body hr {
+    /*
+    background: transparent url("/assets/primer/markdown/dirty-shade-3d43d541b0f089487a139219bbf0309c6b1f2cd8.png") repeat-x 0 0;
+    */
+    border: 0 none;
+    color: #ccc;
+    height: 4px;
+    padding: 0;
+    margin: 15px 0;
+}
+.markdown-body li p.first {
+    display: inline-block;
+}
+.markdown-body ul, .markdown-body ol {
+    padding-left: 30px;
+}
+.markdown-body ul.no-list, .markdown-body ol.no-list {
+    list-style-type: none;
+    padding: 0;
+}
+.markdown-body ul ul, .markdown-body ul ol, .markdown-body ol ol, .markdown-body ol ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.markdown-body dl {
+    padding: 0;
+}
+.markdown-body dl dt {
+    font-size: 14px;
+    font-weight: bold;
+    font-style: italic;
+    padding: 0;
+    margin-top: 15px;
+}
+.markdown-body dl dd {
+    margin-bottom: 15px;
+    padding: 0 15px;
+}
+.markdown-body blockquote {
+    border-left: 4px solid #DDD;
+    padding: 0 15px;
+    color: #777;
+}
+.markdown-body blockquote>:first-child {
+    margin-top: 0px;
+}
+.markdown-body blockquote>:last-child {
+    margin-bottom: 0px;
+}
+.markdown-body table {
+    width: 100%;
+    overflow: auto;
+    display: block;
+}
+.markdown-body table th {
+    font-weight: bold;
+}
+.markdown-body table th, .markdown-body table td {
+    border: 1px solid #ddd;
+    padding: 6px 13px;
+}
+.markdown-body table tr {
+    border-top: 1px solid #ccc;
+    background-color: #fff;
+}
+.markdown-body table tr:nth-child(2n) {
+    background-color: #f8f8f8;
+}
+.markdown-body img {
+    max-width: 100%;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.markdown-body span.frame {
+    display: block;
+    overflow: hidden;
+}
+.markdown-body span.frame>span {
+    border: 1px solid #ddd;
+    display: block;
+    float: left;
+    overflow: hidden;
+    margin: 13px 0 0;
+    padding: 7px;
+    width: auto;
+}
+.markdown-body span.frame span img {
+    display: block;
+    float: left;
+}
+.markdown-body span.frame span span {
+    clear: both;
+    color: #333;
+    display: block;
+    padding: 5px 0 0;
+}
+.markdown-body span.align-center {
+    display: block;
+    overflow: hidden;
+    clear: both;
+}
+.markdown-body span.align-center>span {
+    display: block;
+    overflow: hidden;
+    margin: 13px auto 0;
+    text-align: center;
+}
+.markdown-body span.align-center span img {
+    margin: 0 auto;
+    text-align: center;
+}
+.markdown-body span.align-right {
+    display: block;
+    overflow: hidden;
+    clear: both;
+}
+.markdown-body span.align-right>span {
+    display: block;
+    overflow: hidden;
+    margin: 13px 0 0;
+    text-align: right;
+}
+.markdown-body span.align-right span img {
+    margin: 0;
+    text-align: right;
+}
+.markdown-body span.float-left {
+    display: block;
+    margin-right: 13px;
+    overflow: hidden;
+    float: left;
+}
+.markdown-body span.float-left span {
+    margin: 13px 0 0;
+}
+.markdown-body span.float-right {
+    display: block;
+    margin-left: 13px;
+    overflow: hidden;
+    float: right;
+}
+.markdown-body span.float-right>span {
+    display: block;
+    overflow: hidden;
+    margin: 13px auto 0;
+    text-align: right;
+}
+.markdown-body code, .markdown-body tt {
+    margin: 0 2px;
+    padding: 0px 5px;
+    border: 1px solid #ddd;
+    background-color: #f8f8f8;
+    border-radius: 3px;
+}
+.markdown-body code {
+    white-space: nowrap;
+}
+.markdown-body pre>code {
+    margin: 0;
+    padding: 0;
+    white-space: pre;
+    border: none;
+    background: transparent;
+}
+.markdown-body .highlight pre, .markdown-body pre {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    font-size: 13px;
+    line-height: 19px;
+    overflow: auto;
+    padding: 6px 10px;
+    border-radius: 3px;
+}
+.markdown-body pre code, .markdown-body pre tt {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+}
+.markdown-body .csv-data td, .markdown-body .csv-data th {
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 12px;
+    padding: 5px;
+    text-align: left;
+    line-height: 1;
+}
+.markdown-body .csv-data .blob-line-nums {
+    line-height: 1;
+    padding: 5px 0;
+    background: #fff;
+    border-top: none;
+    border: none;
+}
+.markdown-body .csv-data .blob-line-nums span {
+    margin-top: 3px;
+}
+.markdown-body .csv-data tr.line {
+    border-top: none;
+}
+.markdown-body .csv-data thead th {
+    font-weight: bold;
+    border-top: none;
+    background: #f8f8f8;
 }
