--- a/components/mattpardee-listview/listview.css
+++ b/components/mattpardee-listview/listview.css
@@ -1,4 +1,101 @@
 .listitem {
-	padding: 10px 15px;
 	border-bottom: 1px solid #ddd;
+}
+
+.listitem > div:last-child {
+	padding: 10px 10px 10px 0;
+}
+
+.listitem i.delete-item {
+	display: block;
+	position: relative;
+	top: -4px;
+	left: -4px;
+	width: 17px;
+	height: 17px;
+	color: #F00;
+	font-size: 18px;
+	opacity: 0;
+	-webkit-transition: -webkit-transform 0.2s, opacity 0.1s;
+	-webkit-transform: rotate(45deg);
+	-webkit-transform-origin: 50% 50%;
+}
+
+.listitem i.delete-item span {
+	display: block;
+	width: 17px;
+	height: 17px;
+	background: url(../../assets/images/delete_item_icon.png) 0 0 no-repeat;
+	background-size: 100% 100%;
+}
+
+.listitem i.delete-item:hover span {
+	background: url(../../assets/images/delete_item_icon_hover.png) 0 0 no-repeat;
+	background-size: 100% 100%;
+}
+
+.listview.editmode .listitem i.delete-item {
+	pointer-events: auto;
+	-webkit-transform: rotate(0deg);
+	opacity: 1;
+}
+
+.listview {
+	background: #d0d0d0 url(../../assets/images/thatched_bg.png);
+}
+
+.listitemcontainer {
+	overflow: auto;
+}
+
+.listheader {
+	background: #fff;
+	border-bottom: 1px solid #bbb;
+}
+
+.listheader .iconbutton {
+	border-left: 1px solid #bbb;
+}
+
+.listitem {
+	cursor: default;
+	background: #fff;
+	border-bottom: 1px solid #aaa;
+	-webkit-transition: background 0.15s;
+	-moz-transition: background 0.15s;
+	-o-transition: background 0.15s;
+	-ms-transition: background 0.15s;
+}
+
+.listitem:hover {
+	background: #f7f7f7;
+}
+
+.listitem * {
+	pointer-events: none;
+}
+
+.listitem .selector {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	border-radius: 40px;
+	border: 2px solid #fff;
+    background: #fff;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
+    position: absolute;
+    left: 14px;
+    top: 19px;
+
+    -webkit-transition: background 0.25s;
+	-moz-transition: background 0.25s;
+	-o-transition: background 0.25s;
+	-ms-transition: background 0.25s;
+}
+
+.listitem:hover .selector {
+	background: #bbb;
+}
+.listitem.selected .selector, .listitem.selected:hover .selector {
+	background: #5EF240;
 }
